# DualGraphRagAgent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
notebooks/: prototype.ipynb
src/: __init__.py  main.py
src/agents/: __init__.py  cypher_agent.py  semantic_aligner.py  simulation_agent.py  sufficiency_checker.py  synthesis_agent.py  traversal_agent.py  world_model_agent.py
src/graph/: __init__.py  graph_interface.py  langgraph_workflow.py  neo4j_store.py  networkx_store.py
src/ingestion/: __init__.py  chunker.py  extraction_agent.py  incremental_loader.py  meta_agent.py
src/llm/: __init__.py  gemini_provider.py
src/schema/: __init__.py  ontology.py  world_state.py
src/tools/: __init__.py  neo4j_tools.py  simulation_tools.py
tests/: __init__.py  test_neo4j_store.py  test_networkx_store.py  test_query_loop.py  test_schema.py  test_simulation.py  test_world_state.py
